# tauri-fundsp-flucoma-solid-starter

./: .gitignore  .gitmodules  .taurignore  README.md  bootstrap.sh  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.agents/skills/: SKILLS-RT.md  SKILLS.md  SKILLS_2.md  SKILLS_3.md
.agents/skills/ffmpeg-video-ops/references/: pipeline-patterns.md
.agents/skills/fundsp-oversampling/: SKILL.md
.agents/skills/incline-function-lookup/: SKILL.md
.agents/skills/incline-function-lookup/agents/: openai.yaml
.agents/skills/incline-function-lookup/references/: patterns.md
.agents/skills/never-engine-labs-user-guide/: SKILL.md
.agents/skills/never-engine-labs-user-guide/scripts/: generate_oss_acknowledgements.sh
.agents/skills/solid-primitives-flux-store/: SKILL.md
.agents/skills/solid-primitives-keyboard/: SKILL.md
.agents/skills/wav-to-wt/: SKILL.md
.aiassistant/rules/: JUNIE_PROJECT_RULES.md
.githooks/: pre-push
src/: App.tsx  index.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/analysis_interface/: Cargo.toml
src-tauri/analysis_interface/src/: lib.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: service.rs
src-tauri/src/application/: mod.rs
src-tauri/src/audio/: decoder.rs  engine.rs
src-tauri/src/commands/: starter.rs
src-tauri/src/state/: mod.rs
src/features/analysis/: AnalysisPanel.tsx
src/features/audio/: AudioPanel.tsx
src/features/project/: ProjectShell.tsx
src/shared/styles/: app.css
src/shared/ui/: SectionCard.tsx
(+8 files in other folders)
